// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should RENDER EXPENSE LIST WITH EXPENSES 1`] = `
<div>
  <h1>
    Expenses List
  </h1>
  <h3>
    SortBy:
    <select
      onChange={[Function]}
      value="date"
    >
      <option
        value="date"
      >
        Date
      </option>
      <option
        value="amount"
      >
        Amount
      </option>
    </select>
  </h3>
  <Component
    expense={
      Object {
        "amount": 199,
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "Watter bill",
        "id": "1",
        "note": "",
      }
    }
    key="1"
  />
  <Component
    expense={
      Object {
        "amount": 4500,
        "createdAt": "1969-12-28T00:00:00.000Z",
        "description": "Bank accounts",
        "id": "2",
        "note": "",
      }
    }
    key="2"
  />
  <Component
    expense={
      Object {
        "amount": 325,
        "createdAt": "1970-01-05T00:00:00.000Z",
        "description": "Gas bill",
        "id": "3",
        "note": "",
      }
    }
    key="3"
  />
</div>
`;

exports[`should RENDER EXPENSE LIST WITH NO EXPENSES 1`] = `
<div>
  <h1>
    Expenses List
  </h1>
  <h3>
    SortBy:
    <select
      onChange={[Function]}
      value="date"
    >
      <option
        value="date"
      >
        Date
      </option>
      <option
        value="amount"
      >
        Amount
      </option>
    </select>
  </h3>
  <p>
     No expenses
  </p>
</div>
`;
